--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">DeliveryApp</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string-array name="sort_items">
+        <item>Sort by Distance</item>
+        <item>Sort by Time</item>
+        <item>Sort by Wage</item>
+    </string-array>
 
 </resources>
